--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -138,7 +138,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Poppins", sans-serif;
+  font-family: "Poppins",;
   color: var(--clr-common-heading);
   margin-top: 0px;
   font-weight: 600;
@@ -185,7 +185,7 @@ li {
 }
 
 p {
-  font-family: "Bauhaus Std", sans-serif;
+  font-family: "Bauhaus Std";
   font-size: 16px;
   font-weight: 350;
   color: var(--clr-common-text);
@@ -987,7 +987,7 @@ p {
 
 .cp-btn-3 {
   font-weight: 600;
-  font-family: "Poppins", sans-serif;
+  font-family: "Poppins",;
   font-size: 16px;
   border-radius: 6px;
   -webkit-border-radius: 6px;
